# vertical-fl

./: .gitignore  pyproject.toml
vertical_fl/: client_app.py  data_loader.py  dataset.py  model.py  server_app.py  strategy.py  task.py
