[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertical-fl"
version = "1.0.0"
description = "PyTorch Vertical FL with Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets>=0.5.0",
    "pandas==2.2.3",
    "numpy>=1.26.0",
    "scikit-learn==1.5.0",
    "torch==2.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "vertical_fl.server_app:app"
clientapp = "vertical_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 100
train.learning-rate = 0.1
train.batch-size = 128 # Fit on RTX4090
use-fixed-data = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2 # Note that this example will require changes to how VFL is implemented
options.backend.client-resources.num-gpus = 1.0
options.backend.client-resources.num-cpus = 4
